--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "dependencies": {
+    "body-parser": "^1.20.0",
     "express": "^4.18.1"
   },
   "name": "expressprgrm",
   "version": "1.0.0",
   "description": "This is sample express prgrm",
   "main": "index.js",
-  "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node apps.js"
   },
   "author": "Aiswarya",
   "license": "ISC"
