--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "dependencies": {
     "body-parser": "^1.20.0",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "mongoose": "^6.4.6"
   },
   "name": "expressprgrm",
   "version": "1.0.0",
